--- a/world/transmission/.artixlinux/pkgbase.yaml
+++ b/world/transmission/.artixlinux/pkgbase.yaml
@@ -1,13 +1,4 @@
 ---
-pkgbase:
-  name: transmission
-  version: 4.0.6-9
-  arch:
-    - x86_64
-  pkgname:
-    - transmission-cli
-    - transmission-gtk
-    - transmission-qt
 actions:
   addRepo: world
   removeRepo: null
@@ -20,40 +11,52 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 4.0.6-9
+    version: 4.0.6-10
     packages:
-      - transmission-cli-4.0.6-9-x86_64.pkg.tar.zst
-      - transmission-gtk-4.0.6-9-x86_64.pkg.tar.zst
-      - transmission-qt-4.0.6-9-x86_64.pkg.tar.zst
+      - transmission-cli-4.0.6-10-x86_64.pkg.tar.zst
+      - transmission-gtk-4.0.6-10-x86_64.pkg.tar.zst
+      - transmission-qt-4.0.6-10-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
