--- a/lib32/wine-staging/.artixlinux/pkgbase.yaml
+++ b/lib32/wine-staging/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
-  addRepo: lib32-gremlins
-  removeRepo: null
-  triggersBuild: true
+  addRepo: lib32
+  removeRepo: lib32-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -37,14 +37,13 @@ repos:
     packages: []
     debug: []
   lib32-gremlins:
-    version: 10.8-1
-    packages:
-      - wine-staging-10.8-1-x86_64.pkg.tar.zst
+    version: null
+    packages: []
     debug: []
   lib32:
-    version: 10.8-1
+    version: 10.9-1
     packages:
-      - wine-staging-10.8-1-x86_64.pkg.tar.zst
+      - wine-staging-10.9-1-x86_64.pkg.tar.zst
     debug: []
   galaxy-goblins:
     version: null
