--- a/world/materialx/.artixlinux/pkgbase.yaml
+++ b/world/materialx/.artixlinux/pkgbase.yaml
@@ -1,55 +1,60 @@
 ---
 team: world
-pkgbase:
-  name: materialx
-  version: 1.38.10-6
-  arch:
-    - x86_64
-  pkgname:
-    - materialx
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 1.38.10-6
+    version: 1.39.3-1
     packages:
-      - materialx-1.38.10-6-x86_64.pkg.tar.zst
+      - materialx-1.39.3-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
