--- a/world/ruby-sass-embedded/.artixlinux/pkgbase.yaml
+++ b/world/ruby-sass-embedded/.artixlinux/pkgbase.yaml
@@ -2,11 +2,11 @@
 team: world
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -26,14 +26,13 @@ repos:
     packages: []
     debug: []
   world-gremlins:
-    version: 1.89.0-1
-    packages:
-      - ruby-sass-embedded-1.89.0-1-any.pkg.tar.zst
+    version: null
+    packages: []
     debug: []
   world:
-    version: 1.89.1-1
+    version: 1.89.2-1
     packages:
-      - ruby-sass-embedded-1.89.1-1-any.pkg.tar.zst
+      - ruby-sass-embedded-1.89.2-1-any.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
