--- a/world/xf86-input-wacom/.artixlinux/pkgbase.yaml
+++ b/world/xf86-input-wacom/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
-  addRepo: galaxy-goblins
-  removeRepo: null
-  triggersBuild: true
+  addRepo: null
+  removeRepo: galaxy-goblins
+  triggersBuild: false
   triggersRebuild: false
-  triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoAdd: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -46,9 +46,8 @@ repos:
     packages: []
     debug: []
   galaxy-goblins:
-    version: 1.2.3-1
-    packages:
-      - xf86-input-wacom-1.2.3-1-x86_64.pkg.tar.zst
+    version: null
+    packages: []
     debug: []
   galaxy-gremlins:
     version: null
