--- a/world/xorg-server/.artixlinux/pkgbase.yaml
+++ b/world/xorg-server/.artixlinux/pkgbase.yaml
@@ -1,65 +1,65 @@
 ---
-pkgbase:
-  name: xorg-server
-  version: 21.1.16-1
-  arch:
-    - x86_64
-  pkgname:
-    - xorg-server
-    - xorg-server-xephyr
-    - xorg-server-xvfb
-    - xorg-server-xnest
-    - xorg-server-common
-    - xorg-server-devel
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 21.1.16-1
+    version: 21.1.17-1
     packages:
-      - xorg-server-21.1.16-1-x86_64.pkg.tar.zst
-      - xorg-server-xephyr-21.1.16-1-x86_64.pkg.tar.zst
-      - xorg-server-xvfb-21.1.16-1-x86_64.pkg.tar.zst
-      - xorg-server-xnest-21.1.16-1-x86_64.pkg.tar.zst
-      - xorg-server-common-21.1.16-1-x86_64.pkg.tar.zst
-      - xorg-server-devel-21.1.16-1-x86_64.pkg.tar.zst
+      - xorg-server-21.1.17-1-x86_64.pkg.tar.zst
+      - xorg-server-xephyr-21.1.17-1-x86_64.pkg.tar.zst
+      - xorg-server-xvfb-21.1.17-1-x86_64.pkg.tar.zst
+      - xorg-server-xnest-21.1.17-1-x86_64.pkg.tar.zst
+      - xorg-server-common-21.1.17-1-x86_64.pkg.tar.zst
+      - xorg-server-devel-21.1.17-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
