--- a/world/xdg-desktop-portal-kde/PKGBUILD
+++ b/world/xdg-desktop-portal-kde/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=xdg-desktop-portal-kde
-pkgver=6.3.5
+pkgver=6.4.0
 _dirver=$(echo $pkgver | cut -d. -f1-3)
 pkgrel=1
 pkgdesc='A backend implementation for xdg-desktop-portal using Qt/KF5'
@@ -14,11 +14,13 @@ depends=(gcc-libs
          kcoreaddons
          kcrash
          kglobalaccel
+         kguiaddons
          kiconthemes
          ki18n
          kio
          kio-fuse
          kirigami
+         kirigami-addons
          kitemviews
          knotifications
          kpipewire
@@ -39,7 +41,7 @@ makedepends=(extra-cmake-modules
 provides=(xdg-desktop-portal-impl)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$_dirver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('0c2bdc572a6f40ee45d1bda090ed742551b0ca348c469ba1470f8745395a6cf8'
+sha256sums=('00db7b1551146b0da91078bf540ca2af56c9d20f9f25469e25839d09455a9ace'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
