--- a/world/plasma-meta/PKGBUILD
+++ b/world/plasma-meta/PKGBUILD
@@ -2,48 +2,73 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=plasma-meta
-pkgver=6.3
-pkgrel=2
+pkgver=6.4
+pkgrel=4.1
 pkgdesc='Meta package to install KDE Plasma'
 arch=(any)
 license=(None)
 url='https://kde.org/plasma-desktop/'
-depends=(bluedevil
+depends=(aurorae
+         bluedevil
+         breeze
          breeze-gtk
          discover
-         drkonqi
+         kactivitymanagerd
+         kde-cli-tools
          kde-gtk-config
+         kdecoration
          kdeplasma-addons
-         kgamma
+         kglobalacceld
          kinfocenter
+         kmenuedit
+         kpipewire
          krdp
          kscreen
+         kscreenlocker
          ksshaskpass
+         ksystemstats
          kwallet-pam
+         kwayland
+         kwin
+         kwin-x11
          kwrited
+         layer-shell-qt
+         libkscreen
+         libksysguard
+         libplasma
+         milou
          ocean-sound-theme
          oxygen
          oxygen-sounds
+         plasma-activities
+         plasma-activities-stats
          plasma-browser-integration
          plasma-desktop
          plasma-disks
          plasma-firewall
+         plasma-integration
          plasma-nm
-         plasma-workspace-wallpapers
          plasma-pa
          plasma-systemmonitor
          plasma-thunderbolt
          plasma-vault
          plasma-welcome
+         plasma-workspace
+         plasma-workspace-wallpapers
+         polkit-kde-agent
          powerdevil
          print-manager
          sddm-kcm
          spectacle
-         wacomtablet
+         systemsettings
          xdg-desktop-portal-kde
 )
 optdepends=('breeze-grub: Breeze theme for GRUB'
             'breeze-plymouth: Breeze theme for Plymouth'
             'flatpak-kcm: Manage Flatpak applications from systemsettings'
+            'kgamma: Adjust gamma settings on X'
+            #'kwin-x11: X11 window manager'
+            'plasma-x11-session: Plasma X11 session'
             'plymouth-kcm: Configure Plymouth from systemsettings'
-            'plasma-sdk: Development tools')
+            'plasma-sdk: Development tools'
+            'wacomtablet: Drawing tablet settings on X')
