--- a/world/plasma-sdk/PKGBUILD
+++ b/world/plasma-sdk/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=plasma-sdk
-pkgver=6.3.5
+pkgver=6.4.0
 _dirver=$(echo $pkgver | cut -d. -f1-3)
 pkgrel=1
 pkgdesc='Applications useful for Plasma development'
@@ -16,6 +16,7 @@ depends=(gcc-libs
          kcompletion
          kconfig
          kcoreaddons
+         kcrash
          kdbusaddons
          kdeclarative
          ki18n
@@ -38,7 +39,7 @@ makedepends=(extra-cmake-modules
              kdoctools)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$_dirver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('70e047ff2c575114cbb36e782c3e045b25325a80d8fd7a401bd8158c3fb29cd3'
+sha256sums=('b3f1316b163bb5e6ab86970306e663760ae93814a43ed43f2b2f761128ac2885'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
