--- a/world/plasma-workspace/.artixlinux/pkgbase.yaml
+++ b/world/plasma-workspace/.artixlinux/pkgbase.yaml
@@ -1,11 +1,11 @@
 ---
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -29,9 +29,10 @@ repos:
     packages: []
     debug: []
   world:
-    version: 6.3.5-2
+    version: 6.4.0-5
     packages:
-      - plasma-workspace-6.3.5-2-x86_64.pkg.tar.zst
+      - plasma-workspace-6.4.0-5-x86_64.pkg.tar.zst
+      - plasma-x11-session-6.4.0-5-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
