--- a/world/plasma-workspace/PKGBUILD
+++ b/world/plasma-workspace/PKGBUILD
@@ -2,11 +2,11 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 # Contributor: Alexey D. <lq07829icatm at rambler.ru>
-
-pkgname=plasma-workspace
-pkgver=6.3.5
+pkgbase=plasma-workspace
+pkgname=(plasma-workspace plasma-x11-session)
+pkgver=6.4.0
 _dirver=$(echo $pkgver | cut -d. -f1-3)
-pkgrel=2
+pkgrel=5
 pkgdesc='KDE Plasma Workspace'
 arch=(x86_64)
 url='https://kde.org/plasma-desktop/'
@@ -87,7 +87,6 @@ depends=(accountsservice
          libxtst
          milou
          ocean-sound-theme
-         phonon-qt6
          plasma-activities
          plasma-activities-stats
          plasma5support
@@ -95,6 +94,7 @@ depends=(accountsservice
          qt6-5compat
          qt6-base
          qt6-declarative
+         qt6-location
          qt6-positioning
          qt6-svg
          qt6-tools # for qdbus
@@ -115,22 +115,12 @@ makedepends=(baloo
              extra-cmake-modules
              kdoctools
              networkmanager-qt
+             phonon-qt6
              plasma-wayland-protocols
              qcoro)
-optdepends=('appmenu-gtk-module: global menu support for GTK2 and some GTK3 applications'
-            'baloo: Baloo search runner'
-            'discover: manage applications installation from the launcher'
-            'kdepim-addons: displaying PIM events in the calendar'
-            'kwayland-integration: Wayland integration for Qt5 applications'
-            'networkmanager-qt: IP based geolocation'
-            'plasma-workspace-wallpapers: additional wallpapers'
-            'plasma5-integration: use Plasma settings in Qt5 applications'
-            'xdg-desktop-portal-gtk: sync font settings to Flatpak apps')
-conflicts=(plasma-wayland-session)
-replaces=(plasma-wayland-session)
 groups=(plasma)
 source=(https://download.kde.org/stable/plasma/$_dirver/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('7f508f6ca27d7d615eee27919dd0b0f94d168ba81c3a4d543968046bccb787f2'
+sha256sums=('961ef54f7fd21f212f8d633300f1bb0520524aa9794e433ae1abe16ac0560b2b'
             'SKIP')
 validpgpkeys=('E0A3EB202F8E57528E13E72FD7574483BB57B18D'  # Jonathan Esk-Riddell <jr@jriddell.org>
               '0AAC775BB6437A8D9AF7A3ACFE0784117FBCE11D'  # Bhushan Shah <bshah@kde.org>
@@ -146,10 +136,35 @@ build() {
   cmake --build build
 }
 
-package() {
-  depends+=(plasma-integration) # Declare runtime dependency here to avoid dependency cycles at build time
+package_plasma-workspace() {
+  optdepends=('appmenu-gtk-module: global menu support for GTK2 and some GTK3 applications'
+            'baloo: Baloo search runner'
+            'discover: manage applications installation from the launcher'
+            'kdepim-addons: displaying PIM events in the calendar'
+            'kwayland-integration: Wayland integration for Qt5 applications'
+            #'kwin-x11: X session window manager'
+            'networkmanager-qt: IP based geolocation'
+            'plasma-workspace-wallpapers: additional wallpapers'
+            'plasma5-integration: use Plasma settings in Qt5 applications'
+            'xdg-desktop-portal-gtk: sync font settings to Flatpak apps')
+  depends+=(plasma-integration # Declare runtime dependency here to avoid dependency cycles at build time
+            plasma-x11-session)
+  conflicts=(plasma-wayland-session)
+  replaces=(plasma-wayland-session)
 
   DESTDIR="$pkgdir" cmake --install build
 
-  rm -r $pkgdir/usr/lib/systemd
+  rm -r "$pkgdir"/usr/share/xsessions/plasmax11.desktop
+  rm -rf $pkgdir/usr/lib/systemd
+}
+
+
+package_plasma-x11-session() {
+  pkgdesc='Plasma X11 session'
+  depends=(plasma-workspace kwin-x11)
+  groups=()
+
+  install -Dm644 build/login-sessions/plasmax11.desktop -t "$pkgdir"/usr/share/xsessions
+
+  rm -rf $pkgdir/usr/lib/systemd
 }
